force-app/main/default/objects/Fianza__c/Fianza__c.object-meta.xml
<CustomObject>
    <label>Fianzassss</label>
    <nameField>
        <label>Número de fianza</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fianzas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>