force-app/main/default/objects/Fianza__c/fields/Afianzadora__c.field-meta.xml
<CustomField>
    <fullName>Afianzadora__c</fullName>
    <formula>No_Contrato__r.Afianzadora__r.Name</formula>
    <label>Afianzadora</label>
    <type>Text</type>
</CustomField>