force-app/main/default/objects/Fianza__c/fields/Afianzadora_Account__c.field-meta.xml
<CustomField>
    <fullName>Afianzadora_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Afianzadora</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Afianzadora_Account</relationshipName>
    <type>Lookup</type>
</CustomField>