force-app/main/default/objects/Fianza__c/fields/Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Beneficiario__c</fullName>
    <formula>No_Contrato__r.Beneficiario__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficiario</label>
    <type>Text</type>
</CustomField>