force-app/main/default/objects/Fianza__c/fields/Contratista__c.field-meta.xml
<CustomField>
    <fullName>Contratista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contratista</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Fianzas</relationshipName>
    <type>Lookup</type>
</CustomField>