force-app/main/default/objects/Fianza__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <formula>IF(
    TODAY() &lt;=  Fecha_de_Vencimiento__c ,
    &quot;En plazo&quot;,
    &quot;Vencida&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus</label>
    <type>Text</type>
</CustomField>