force-app/main/default/objects/Fianza__c/fields/Exposici0n__c.field-meta.xml
<CustomField>
    <fullName>Exposici0n__c</fullName>
    <formula>12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exposición</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>