force-app/main/default/objects/Fianza__c/fields/Exposici_n_del__c.field-meta.xml
<CustomField>
    <fullName>Exposici_n_del__c</fullName>
    <label>Exposición</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>