force-app/main/default/objects/Fianza__c/fields/Fecha_de_Emisi_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Emisi_n__c</fullName>
    <label>Fecha de Emisión</label>
    <type>Date</type>
</CustomField>