force-app/main/default/objects/Fianza__c/fields/Fecha_de_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Vencimiento__c</fullName>
    <label>Fecha de Vencimiento</label>
    <type>Date</type>
</CustomField>