force-app/main/default/objects/Fianza__c/fields/Fecha_Vencimiento_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_Vigente__c</fullName>
    <description>Se actualiza cuando hay endosos de extension de vigencia</description>
    <label>Fecha de vencimiento (vigente)</label>
    <type>Date</type>
</CustomField>