force-app/main/default/objects/Fianza__c/fields/Monto_Afianzado_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Monto_Afianzado_Vigente__c</fullName>
    <description>Se actualiza cuando hay endosos de aumento o reduccion</description>
    <label>Monto afianzado (vigente)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>