force-app/main/default/objects/Fianza__c/fields/Monto_total_del_contrato__c.field-meta.xml
<CustomField>
    <fullName>Monto_total_del_contrato__c</fullName>
    <label>Monto total del contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>