force-app/main/default/objects/Fianza__c/fields/No_Contrato__c.field-meta.xml
<CustomField>
    <fullName>No_Contrato__c</fullName>
    <label>No Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Fianzas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>