force-app/main/default/objects/Fianza__c/fields/Numero_de_Fianza__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Fianza__c</fullName>
    <label>Número de Fianza</label>
    <length>80</length>
    <type>Text</type>
</CustomField>