force-app/main/default/objects/Fianza__c/fields/Numero_Fianza__c.field-meta.xml
<CustomField>
    <fullName>Numero_Fianza__c</fullName>
    <externalId>true</externalId>
    <label>Numero de fianza (ext)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>