force-app/main/default/objects/Fianza__c/fields/PlazoReclamaci_n__c.field-meta.xml
<CustomField>
    <fullName>PlazoReclamaci_n__c</fullName>
    <formula>Fecha_de_Vencimiento__c + DiasReclamaci_n__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plazo de reclamación</label>
    <type>Date</type>
</CustomField>