force-app/main/default/objects/Fianza__c/fields/PlazoReclamacion__c.field-meta.xml
<CustomField>
    <fullName>PlazoReclamacion__c</fullName>
    <label>Plazo para reclamación</label>
    <type>Date</type>
</CustomField>