force-app/main/default/objects/Fianza__c/fields/Prima_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Prima_Vigente__c</fullName>
    <description>Se actualiza cuando hay endosos que cambian la prima</description>
    <label>Prima (vigente)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>