force-app/main/default/objects/Fianza__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Fianzas</relationshipName>
    <type>Lookup</type>
</CustomField>