force-app/main/default/objects/Fianza__c/fields/Recargos__c.field-meta.xml
<CustomField>
    <fullName>Recargos__c</fullName>
    <label>Recargos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>