force-app/main/default/objects/Fianza__c/fields/Relativo__c.field-meta.xml
<CustomField>
    <fullName>Relativo__c</fullName>
    <label>Relativo</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>